--- a/gSoapMFCServer.rc
+++ b/gSoapMFCServer.rc
@@ -89,16 +89,16 @@ LANGUAGE LANG_ENGLISH, SUBLANG_ENGLISH_US
 // Dialog
 //
 
-IDD_GSOAPMFCSERVER_DIALOG DIALOGEX 0, 0, 320, 200
+IDD_GSOAPMFCSERVER_DIALOG DIALOGEX 0, 0, 252, 148
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_VISIBLE | WS_CAPTION
 EXSTYLE WS_EX_APPWINDOW
 CAPTION "gSoapMFCServer"
 FONT 8, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
-    DEFPUSHBUTTON   "OK",IDOK,209,179,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,263,179,50,14
+    DEFPUSHBUTTON   "OK",IDOK,119,115,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,173,115,50,14
     CTEXT           "gSoapServerTest",IDC_STATIC,15,14,77,8
-    PUSHBUTTON      "Button1",IDC_BUTTON1,104,137,50,14
+    PUSHBUTTON      "StartWebServer",IDC_BUTTON1,26,50,70,14
 END
 
 
@@ -152,9 +152,9 @@ BEGIN
     IDD_GSOAPMFCSERVER_DIALOG, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 313
+        RIGHTMARGIN, 245
         TOPMARGIN, 7
-        BOTTOMMARGIN, 193
+        BOTTOMMARGIN, 141
     END
 END
 #endif    // APSTUDIO_INVOKED
