fix soap_send bug : use soap_send_raw instead; because when strlen calculate the char group length, the length of calculation is more than the real length of the char group(char buf[BUFFER_SIZE]). Maybe c runtime lib function strlen has some bug on this.

--- a/gSoapMFCServer.vcproj
+++ b/gSoapMFCServer.vcproj
@@ -299,6 +299,11 @@
 				RelativePath=".\jquery-1.4.4.min.js"
 				>
 			</File>
+			<File
+				RelativePath=".\test.htm"
+				DeploymentContent="true"
+				>
+			</File>
 		</Filter>
 		<File
 			RelativePath=".\ReadMe.txt"
