--- a/gSoapMFCServer.rc
+++ b/gSoapMFCServer.rc
@@ -98,7 +98,10 @@ BEGIN
     DEFPUSHBUTTON   "OK",IDOK,119,115,50,14
     PUSHBUTTON      "Cancel",IDCANCEL,173,115,50,14
     CTEXT           "gSoapServerTest",IDC_STATIC,15,14,77,8
-    PUSHBUTTON      "StartWebServer",IDC_BUTTON1,26,50,70,14
+    PUSHBUTTON      "StartWebServer",IDC_BTN_START_SERVER,19,55,70,14
+    PUSHBUTTON      "RunTests",IDC_BTN_RUN_TESTS,155,54,50,14
+    PUSHBUTTON      "AllocConsole",IDC_BTN_ALLOC_CONSOLE,155,30,50,14
+    PUSHBUTTON      "FreeConsole",IDC_BTN_FREE_CONSOLE,156,79,50,14
 END
 
 
