modify the method GetFileFullPath. Add prototype.lite.js moo.fx.js Lib.

--- a/gSoapMFCServer.vcproj
+++ b/gSoapMFCServer.vcproj
@@ -340,6 +340,14 @@
 				>
 			</File>
 			<File
+				RelativePath=".\moo.fx.js"
+				>
+			</File>
+			<File
+				RelativePath=".\prototype.lite.js"
+				>
+			</File>
+			<File
 				RelativePath=".\test.htm"
 				DeploymentContent="true"
 				>
